re PR preprocessor/22231 (-MG ignores missing headers even with -c)

gcc
	PR preprocessor/22231:
	* c-opts.c (sanitize_cpp_opts): Disallow -MG if compilation is
	proceeding.
gcc/testsuite
	PR preprocessor/22231:
	* gcc.dg/pr22231.c: New file.

From-SVN: r135128